update of naviation

--- a/index.html
+++ b/index.html
@@ -5,44 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/2fc5ddd7c6.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav>
-            <ul>
-                <li class="logo">
-                    <h2>Made With Love</h2>
-                </li>
+            <ul class="navlinks">
+                <h2 class="logo">Made With Love</h2>
                 <li> <a href="#">Blog</a> </li>
                 <li> <a href="#">Recipes</a> </li>
                 <li> <a href="#">Vegan</a> </li>
                 <li> <a href="#">Contact</a> </li>
                 <li> <input type="text" placeholder="Search" id="search"> </li>
-                <ul>
-                    <li><img src="#" alt="facebook"></li>
-                    <li><img src="#" alt="instagram"></li>
-                    <li><img src="#" alt="pinterest"></li>
-                    <li><img src="#" alt="twitter"></li>
-                </ul>
+                <!-- <ul class="social">
+                    <li><i class="fab fa-facebook-square"></i></li>
+                    <li><i class="fab fa-instagram-square"></i></li>
+                    <li><i class="fab fa-youtube-square"></i></li>
+                    <li><i class="fab fa-twitter-square"></i></li>
+                </ul> -->
             </ul>
         </nav>
 
 
        <div class="intro-container">
            <div class="background-container">
-                    <h3> Recipies for the soul</h3>
-                    <h1>Made With Love</h1>
+                        <h3 class="title"> Recipies for the soul</h3>
+                        <h1 class="title2">Made With Love</h1>
             </div>
             <div class="box-with-article">
                     <p>November 6 2020</p>
-                    <h3>Oh-So-Sweet Apple Pie For 4th Of July</h3>
+                    <h3>Oh-So-Sweet Apple Pie for 4th Of July</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Ullam impedit praesentium voluptas perferendis cupiditate hic 
                         repellendus labore maxime sint quidem!</p>
                     <button>Read More</button>
             </div>
                  <div class="email">
-                    <h3>sign up for new receipies every week</h3>
+                    <h3>Sign up for new recipies every week</h3>
                     <input type="text" placeholder="Name">
                     <input type="email" placeholder="Email Address">
                     <button type="submit">Sign Me Up</button>
@@ -56,11 +55,11 @@
             <img src="#" alt="Picture of girl">
             <h4>Nicolette Seam</h4>
             <h5>Full time blogger</h5>
-            <ul>
-                <li><img src="#" alt="facebook"></li>
-                <li><img src="#" alt="instagram"></li>
-                <li><img src="#" alt="pinterest"></li>
-                <li><img src="#" alt="twitter"></li>
+            <ul class="social">
+                <li><i class="fab fa-facebook-square"></i></li>
+                <li><i class="fab fa-instagram-square"></i></li>
+                <li><i class="fab fa-youtube-square"></i></li>
+                <li><i class="fab fa-twitter-square"></i></li>
             </ul>
         </aside>
 
@@ -90,14 +89,14 @@
             <p>Newest posts</p>
         </div>
     <footer>
-        <ul>
+        <ul class="footerlinks">
             <li>
                 <p>Follow me on social media</p>
-                <ul>
-                    <li><img src="#" alt="facebook"></li>
-                    <li><img src="#" alt="instagram"></li>
-                    <li><img src="#" alt="pinterest"></li>
-                    <li><img src="#" alt="twitter"></li>
+                <ul class="social">
+                    <li><i class="fab fa-facebook-square"></i></li>
+                    <li><i class="fab fa-instagram-square"></i></li>
+                    <li><i class="fab fa-youtube-square"></i></li>
+                    <li><i class="fab fa-twitter-square"></i></li>
                 </ul>
             </li>
             <li>
