--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             </ul>
         </nav>
 
+        <div class="featuredimg"> </div>
+        <div class="featuredwhite"></div>
 
        <div class="intro-container">
            <div class="background-container">
@@ -46,9 +48,9 @@
                     <input type="email" placeholder="Email Address">
                     <button type="submit">Sign Me Up</button>
                  </div>
+                 
        </div>
     </header>
-
 
     <main>
         <aside>
