with absolute article

--- a/index.html
+++ b/index.html
@@ -25,25 +25,28 @@
                 </ul> -->
             </ul>
         </nav>
-
+<!-- featured article and header -->
         <div class="featuredimg"> </div>
         <div class="featuredwhite"></div>
+        <div class="box-with-article">
+            <p>November 6 2020</p>
+            <h3>Oh-So-Sweet Apple Pie for 4th Of July</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Ullam impedit praesentium voluptas perferendis cupiditate hic 
+                repellendus labore maxime sint quidem!</p>
+            <button>Read More</button>
+        </div>
+        <div class="titleheader">
+            <h3 class="title"> Recipies for the soul</h3>
+            <h1 class="title2">Made With Love</h1>
+        </div>
+
 
        <div class="intro-container">
-           <div class="background-container">
-                        <h3 class="title"> Recipies for the soul</h3>
-                        <h1 class="title2">Made With Love</h1>
-            </div>
-            <div class="box-with-article">
-                    <p>November 6 2020</p>
-                    <h3>Oh-So-Sweet Apple Pie for 4th Of July</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Ullam impedit praesentium voluptas perferendis cupiditate hic 
-                        repellendus labore maxime sint quidem!</p>
-                    <button>Read More</button>
+           <div class="background-container">               
             </div>
                  <div class="email">
-                    <h3>Sign up for new recipies every week</h3>
+                    <label>Sign up for new recipies every week</label>
                     <input type="text" placeholder="Name">
                     <input type="email" placeholder="Email Address">
                     <button type="submit">Sign Me Up</button>
@@ -55,7 +58,7 @@
     <main>
         <aside>
             <img src="#" alt="Picture of girl">
-            <h4>Nicolette Seam</h4>
+            <h4>Nicolette Sean</h4>
             <h5>Full time blogger</h5>
             <ul class="social">
                 <li><i class="fab fa-facebook-square"></i></li>
