Footer and articles started

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <div class="featuredwhite"></div>
         <div class="box-with-article">
             <p>November 6 2020</p>
-            <h3>Oh-So-Sweet Apple Pie for 4th Of July</h3>
+            <h3 class="cursive">Oh-So-Sweet Apple Pie for 4th Of July</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                 Ullam impedit praesentium voluptas perferendis cupiditate hic 
                 repellendus labore maxime sint quidem!</p>
-            <button>Read More</button>
+            <button class="read">Read More</button>
         </div>
         <div class="titleheader">
             <h3 class="title"> Recipies for the soul</h3>
@@ -57,7 +57,7 @@
 
     <main>
         <aside>
-            <img src="#" alt="Picture of girl">
+            <img src="imgs/girl.jpg" alt="Picture of girl">
             <h4>Nicolette Sean</h4>
             <h5>Full time blogger</h5>
             <ul class="social">
@@ -70,21 +70,29 @@
 
 
         <article>
-            <div class="summer-picnic">
-                <p>Recipies</p>
-                <h3>Supper picnic Ideas For Children</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Iure adipisci nisi perferendis porro natus dolorum 
-                    dignissimos eius odio officia aspernatur!</p>
-            </div>
+            <ul class="summer-picnic">
+                <li>
+                    <img src="imgs/food.jpg" alt="food">
+                </li>
+                <li class="writing">
+                    <h6>Recipies</h6>
+                    <h3>Supper picnic Ideas For Children</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptatum adipisci impedit expedita amet magnam placeat similique incidunt nihil, ipsum quibusdam eos possimus, perferendis consectetur culpa maiores accusantium. Quia, vero earum debitis maiores non perferendis?</p>
+                        <button class="read">Read More</button>
+                </li>
+                </ul>
 
-            <div class="arisian dishes">
-                <p>Recipies</p>
-                <h3>Arisan Dishes For Summer Time</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Iure adipisci nisi perferendis porro natus dolorum 
-                    dignissimos eius odio officia aspernatur!</p>
-            </div>
+            <ul class="artisian">
+                <li>
+                    <img src="imgs/food2.jpg" alt="food2">
+                </li>
+                <li class="writing"> 
+                    <h6>Recipies</h6>
+                    <h3>Arisan Dishes For Summer Time</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad laudantium blanditiis quas, vero dolores porro atque beatae debitis hic molestias nulla ab amet veritatis a. Perspiciatis autem animi asperiores vel ratione nemo eum dolore veniam.</p>
+                        <button class="read">Read More</button>
+                </li>
+            </ul>
         </article>
 
     </main>
@@ -104,9 +112,9 @@
                     <li><i class="fab fa-twitter-square"></i></li>
                 </ul>
             </li>
-            <li>
-                <h3>Social and Savy</h3>
-                <p>Copyright Made with love</p>
+            <li id="copy">
+                <h3>Made with Love</h3>
+                <p>Copyright Made with love and created by Lauryn Atlanta</p>
             </li>
             <li>
                 <p>Subscribe to my weekly newsletter</p>
