Almost done desktop

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="titleheader">
             <h3 class="title"> Recipies for the soul</h3>
-            <h1 class="title2">Made With Love</h1>
+            <h1 class="title2">Made with Love</h1>
         </div>
 
 
@@ -46,18 +46,18 @@
            <div class="background-container">               
             </div>
                  <div class="email">
-                    <label>Sign up for new recipies every week</label>
-                    <input type="text" placeholder="Name">
-                    <input type="email" placeholder="Email Address">
-                    <button type="submit">Sign Me Up</button>
+                    <label>Sign up for new recipies every week!</label>
+                    <input type="text" placeholder="Name" class="name">
+                    <input type="email" placeholder="Email Address" class="emailinput">
+                    <button type="submit" class="submit">Sign Me Up</button>
                  </div>
                  
        </div>
     </header>
 
-    <main>
+<main>
         <aside>
-            <img src="imgs/girl.jpg" alt="Picture of girl">
+            <div class="author"></div>
             <h4>Nicolette Sean</h4>
             <h5>Full time blogger</h5>
             <ul class="social">
@@ -69,7 +69,7 @@
         </aside>
 
 
-        <article>
+    <article>
             <ul class="summer-picnic">
                 <li>
                     <img src="imgs/food.jpg" alt="food">
@@ -93,9 +93,8 @@
                         <button class="read">Read More</button>
                 </li>
             </ul>
-        </article>
-
-    </main>
+    </article>
+</main>
         <div class="above-footer">
             <p>Older posts</p>
             <p>Recipies for the soul</p>
@@ -114,12 +113,12 @@
             </li>
             <li id="copy">
                 <h3>Made with Love</h3>
-                <p>Copyright Made with love and created by Lauryn Atlanta</p>
+                <p>Copyright Made with love<br>copy of design created by Lauryn Atlanta</p>
             </li>
-            <li>
+            <li class="emailfooter">
                 <p>Subscribe to my weekly newsletter</p>
-                <input type="email" placeholder="Email address">
-                <button type="submit">Sign Me Up</button>
+                <input type="email" class="emailinput" placeholder="Email address">
+                <button type="submit" class="submit">Sign Me Up</button>
             </li>
         </ul>
 
