--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
            <div class="background-container">               
             </div>
                  <div class="email">
-                    <label>Sign up for new recipies every week!</label>
+                    <label>Sign up for new recipies every week!</label><br><br>
                     <input type="text" placeholder="Name" class="name">
                     <input type="email" placeholder="Email Address" class="emailinput">
                     <button type="submit" class="submit">Sign Me Up</button>
