media queries update 2

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
            <div class="background-container">               
             </div>
                  <div class="email">
-                    <label>Sign up for new recipies every week!</label><br><br>
+                    <label>Sign up for new recipies every week!</label>
                     <input type="text" placeholder="Name" class="name">
                     <input type="email" placeholder="Email Address" class="emailinput">
                     <button type="submit" class="submit">Sign Me Up</button>
@@ -56,17 +56,6 @@
     </header>
 
 <main>
-        <aside>
-            <div class="author"></div>
-            <h4>Nicolette Sean</h4>
-            <h5>Full time blogger</h5>
-            <ul class="social">
-                <li><i class="fab fa-facebook-square"></i></li>
-                <li><i class="fab fa-instagram-square"></i></li>
-                <li><i class="fab fa-youtube-square"></i></li>
-                <li><i class="fab fa-twitter-square"></i></li>
-            </ul>
-        </aside>
 
 
     <article>
@@ -94,6 +83,17 @@
                 </li>
             </ul>
     </article>
+    <aside>
+        <div class="author"></div>
+        <h4>Nicolette Sean</h4>
+        <h5>Full time blogger</h5>
+        <ul class="social">
+            <li><i class="fab fa-facebook-square"></i></li>
+            <li><i class="fab fa-instagram-square"></i></li>
+            <li><i class="fab fa-youtube-square"></i></li>
+            <li><i class="fab fa-twitter-square"></i></li>
+        </ul>
+    </aside>
 </main>
         <div class="above-footer">
             <p>Older posts</p>
